--- a/build.xml
+++ b/build.xml
@@ -8,16 +8,16 @@
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
 
-<target name="package-for-store" depends="jar">
+<!--<target name="package-for-store" depends="jar">
 
-    <!-- Change the value of this property to be the name of your JAR,
+     Change the value of this property to be the name of your JAR,
          minus the .jar extension. It should not have spaces.
          <property name="store.jar.name" value="MyJarName"/>
-    -->
+    
     <property name="store.jar.name" value="SMartyModeling"/>
 
 
-    <!-- don't edit below this line -->
+     don't edit below this line 
 
     <property name="store.dir" value="store"/>
     <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
@@ -43,9 +43,29 @@
 
     <delete file="${store.dir}/temp_final.jar"/>
 
-</target>
+</target>-->
 
 <project name="SMartyModeling-ENG" default="default" basedir=".">
+    <target name="package-for-store" depends="jar">
+    <property name="store.jar.name" value="SMartyModeling"/>
+    <property name="store.dir" value="store"/>
+    <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+    <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+    <delete dir="${store.dir}"/>
+    <mkdir dir="${store.dir}"/>
+    <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+        <zipgroupfileset dir="dist" includes="*.jar"/>
+        <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+        <manifest>
+            <attribute name="Main-Class" value="${main.class}"/>
+        </manifest>
+    </jar>
+    <zip destfile="${store.jar}">
+        <zipfileset src="${store.dir}/temp_final.jar"
+        excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+    </zip>
+    <delete file="${store.dir}/temp_final.jar"/>
+</target>
     <description>Builds, tests, and runs the project SMartyModeling-ENG.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
